--- a/assets/sass/newStyles/_fixes.scss
+++ b/assets/sass/newStyles/_fixes.scss
@@ -36,7 +36,7 @@
 .booklet-page {
 
 	#header {
-		top: 30px;
+		top: 0;
 		height: 0;
 
 		.lg-black {
@@ -53,34 +53,18 @@
 
 		a[href="#nav"] {
 			background-image: url(../../images/icon/burger.svg);
-			// width: 40px;
-			// background-size: contain;
-			// @media (max-width: $large) {
-			// 	width: 27px;
-			// }
 		}
 	}
 }
 
 #banner {
 
-	// .lg-black, .lg, .lg-white {
-	// 	width: 80px;
-	// 	height: 80px;
-	// 	padding-top: 80px;
-	// 	@media (max-width: $large) {
-	// 		width: 40px;
-	// 		height: 40px;
-	// 		padding-top: 40px;
-	// 	}
-	// }
-
 	.sub-scroll-menu {
 		position: absolute;
 		z-index: 1;
 		width: 100%;
 		text-align: center;
-		top: 60px;
+		top: 25px;
 		@media (max-width: $small) {
 			display: none;
 		}
@@ -102,13 +86,12 @@
 		right: 0;
 		bottom: 0;
 		left: 0;
-		// min-height: 100vh;
 
 		.static-banner-logo {
 		    position: absolute;
 		    z-index: 100;
 		    left: 4em;
-		    top: 4em;
+		    top: 25px;
 		}
 
 		.static-banner-menu {
@@ -186,6 +169,12 @@
 		.carousel-cell {
 			display: flex;
 		}
+
+		.lg, .lg-white, .lg-black {
+			width: 50px;
+			height: 50px;
+			padding-top: 50px;
+		}
 	}
 
 	.flickity-page-dots {
@@ -218,5 +207,51 @@
 				}
 			}
 		}
+	}
+}
+
+#header {
+
+	a[href="#nav"] {
+		right: 3em;
+		top: 0;
+	}
+
+	.sub-scroll-menu {
+		display: none;
+	}
+
+	&.sticky {
+
+		a[href="#nav"] {
+			background-position: center;
+		}
+
+		.sub-scroll-menu {
+			display: block;
+			width: 100%;
+			text-align: center;
+			@media (max-width: $small) {
+				display: none;
+			}
+
+			.item {
+				display: inline-block;
+				font-size: 15px;
+				color: #b5b4b4;
+
+				& + .item {
+					margin-left: 32px;
+				}
+			}
+		}
+	}
+
+	.lg, .lg-white, .lg-black {
+		width: 50px;
+		height: 50px;
+		padding-top: 50px;
+		background-size: 100%;
+		top: 25px;
 	}
 }
