--- a/assets/sass/newStyles/theme.scss
+++ b/assets/sass/newStyles/theme.scss
@@ -1,6 +1,8 @@
 @import "variables";
+@import "main";
 
 @import "fixes";
 @import "mustread";
 @import "locations";
 @import "download";
+@import "news-item";
