--- a/assets/sass/newStyles/_main.scss
+++ b/assets/sass/newStyles/_main.scss
@@ -1,7 +1,17 @@
-.news-item-page #main {
-    padding: 6em 0 4em 0;
-    width: 90%;
-    @media (max-width: $large) {
-    	width: 100%!important;
-    }
+.news-item-page {
+
+	#main {
+		padding: 6em 0 4em 0;
+	    width: 90%;
+	    @media (max-width: $large) {
+	    	width: 100%!important;
+	    }
+	    @media (max-width: $small) {
+	    	padding-top: 130px;
+	    }
+	}
+
+	#header {
+		top: 0;
+	}
 }
