--- a/assets/sass/newStyles/_news-item.scss
+++ b/assets/sass/newStyles/_news-item.scss
@@ -45,6 +45,9 @@
 					line-height: 1;
 					margin-bottom: 35px;
 				}
+				@media (max-width: $xsmall) {
+					font-size: 20px;
+				}
 			}
 
 			.date {
@@ -56,8 +59,36 @@
 		}
 	}
 
+	#banner {
+		height: 730px;
+		@media (max-width: $large) {
+			height: 440px;
+		}
+		@media (max-width: $small) {
+			height: 300px;
+		}
+		@media (max-width: $xsmall) {
+			height: 250px;
+		}
+
+		.mask-cursor-left,
+		.mask-cursor-right {
+			bottom: 60px;
+		}
+	}
+
 	.news-item-carousel {
 		margin-bottom: 50px;
+		height: 680px;
+		@media (max-width: $large) {
+			height: 390px;
+		}
+		@media (max-width: $small) {
+			height: 250px;
+		}
+		@media (max-width: $small) {
+			height: 200px;
+		}
 
 		.carousel-cell {
 			padding-bottom: 60px;
@@ -73,8 +104,11 @@
 				text-align: left;
 				font-size: 12px;
 				line-height: 1.42;
-				@media (max-width: $xsmall) {
-					padding: 0 30px;
+				@media (max-width: $large) {
+					padding: 15px 30px 0;
+				}
+				@media (max-width: $large) {
+					padding: 15px 20px 0;
 				}
 
 				.author {
@@ -146,6 +180,13 @@
 			.text-snip {
 				font-size: 12px;
   				line-height: 1.42;
+  				padding: 12px 0 0;
+  				@media (max-width: $large) {
+  					padding: 12px 30px 0;
+  				}
+  				@media (max-width: $small) {
+  					padding: 12px 20px 0;
+  				}
 
   				.author {
   					color: #000;
@@ -156,6 +197,7 @@
 				margin-left: 40px;
 				@media (max-width: $small) {
 					margin-left: 0;
+					margin-top: 30px;
 				}
 			}
 		}
@@ -216,14 +258,17 @@
 
 	.news {
 		margin-top: 180px;
+		padding: 0 30px;
 		@media (max-width: $large) {
 			margin-top: 140px;
 		}
 		@media (max-width: $small) {
 			margin-top: 120px;
+			padding: 0 20px;
 		}
 		@media (max-width: $xsmall) {
 			margin-top: 100px;
+			padding: 0;
 		}
 
 		.button-holder {
@@ -238,6 +283,12 @@
 				text-transform: uppercase;
 				color: #000;
 				font-size: 26px;
+			}
+		}
+
+		.news-snip:nth-child(3) {
+			@media (max-width: $small) {
+				display: none;
 			}
 		}
 	}
