--- a/assets/sass/newStyles/_fixes.scss
+++ b/assets/sass/newStyles/_fixes.scss
@@ -1,21 +1,56 @@
 .third-grid {
+	display: flex;
+	flex-wrap: wrap;
+
+	// .news-snip {
+	// 	padding-left: 5em;
+	// 	padding-right: 0;
+	// 	@media (max-width: $small) {
+	// 		padding-left: 0;
+	// 		padding-right: 0;
+	// 	}
+
+	// 	&:nth-of-type(3n+1) {
+	// 		padding-left: 0;
+	// 		padding-right: 0;
+	// 	}
+
+	// 	&:nth-of-type(2n) {
+	// 		@media (max-width: $small) {
+	// 			padding-left: 5em;
+	// 		}
+	// 	}
+	// }
 
 	.news-snip {
-		padding-left: 5em;
-		padding-right: 0;
+		padding: 0;
+		margin-right: 8%;
+		width: 28%;
 		@media (max-width: $small) {
-			padding-left: 0;
-			padding-right: 0;
+			margin-right: 10%;
+			width: 45%;
+		}
+		@media (max-width: $xsmall) {
+			margin-right: 0;
+			width: 100%;
 		}
 
-		&:nth-of-type(3n+1) {
-			padding-left: 0;
-			padding-right: 0;
-		}
-
-		&:nth-of-type(2n) {
+		&:nth-child(3n+3) {
+			margin-right: 0;
 			@media (max-width: $small) {
-				padding-left: 5em;
+				margin-right: 10%;
+			}
+			@media (max-width: $xsmall) {
+				margin-right: 0;
+			}
+		}
+
+		&:nth-child(2n+2) {
+			@media (max-width: $small) {
+				margin-right: 0;
+			}
+			@media (max-width: $xsmall) {
+				margin-right: 0;
 			}
 		}
 	}
@@ -190,6 +225,14 @@
 				background: #000;
 			}
 		}
+	}
+
+	.mask-cursor-left {
+		display: none;
+	}
+
+	.mask-cursor-right {
+		left: 0;
 	}
 }
 
