--- a/assets/sass/newStyles/theme.scss
+++ b/assets/sass/newStyles/theme.scss
@@ -6,3 +6,6 @@
 @import "locations";
 @import "download";
 @import "news-item";
+@import "author-banner";
+@import "author-bio";
+@import "projects";
