--- a/assets/sass/newStyles/_projects.scss
+++ b/assets/sass/newStyles/_projects.scss
@@ -4,6 +4,10 @@
         cursor: move;
         cursor: -webkit-grab;
         cursor: grab;
+        height: 337px;
+        @media (max-width: $small) {
+            height: 400px;
+        }
 
         .type {
             color: #a7a7a7;
@@ -12,6 +16,7 @@
             font-size: 14px;
             line-height: 16px;
             font-family: 'geometriabold';
+            padding-left: 15px;
             @media (max-width: $small) {
                 margin-bottom: 5px;
                 font-size: 12px;
@@ -27,6 +32,7 @@
                 display: block;
                 margin-bottom: 15px;
                 font-family: 'geometriabold';
+                padding-left: 15px;
             }
             @media (max-width: $xsmall) {
                 padding-left: 15px;
@@ -61,6 +67,7 @@
 
             &.headline {
                 width: 540px;
+                padding-left: 15px;
                 @media (max-width: $large) {
                     width: 390px;
                 }
@@ -89,13 +96,13 @@
                     }
                 }
             }
+        }
 
-            &.last {
-                background: url(../../images/author/goto.png) no-repeat center;
-                width: 220px;
-                height: 300px;
-                display: inline-block;
-            }
+        .last {
+            background: url(../../images/author/goto.png) no-repeat center;
+            width: 220px;
+            height: 300px;
+            display: inline-block;
         }
     }
 }
