--- a/assets/sass/newStyles/_news-item.scss
+++ b/assets/sass/newStyles/_news-item.scss
@@ -4,9 +4,10 @@
 
 		.top-holder {
 			margin: 0 auto 35px;
-			float: none;
-			@media (max-width: $xsmall) {
+			width: 735px;
+			@media (max-width: $small) {
 				padding: 0 20px;
+				width: 100%;
 			}
 
 			.hash-tags {
@@ -73,30 +74,36 @@
 			height: 100%;
 			cursor: url(../../images/icon/arrow-w-r.svg), auto;
 
-			img {
+			.holder {
 				max-width: 100%;
-				max-height: 680px;
-				@media (max-width: $large) {
-					max-height: 390px;
-				}
-				@media (max-width: $small) {
-					max-height: 250px;
-				}
-				@media (max-width: $xsmall) {
-					max-height: 200px;
-				}
-			}
+				overflow: hidden;
 
-			.name {
-				margin-top: 15px;
-				@media (max-width: $xsmall) {
-					padding-left: 20px;
+				img {
+					height: 680px;
+					@media (max-width: $large) {
+						height: 390px;
+					}
+					@media (max-width: $small) {
+						height: 250px;
+					}
+					@media (max-width: $xsmall) {
+						max-height: 200px;
+						height: auto;
+						max-width: 100%;
+					}
 				}
-			}
 
-			.author {
-				@media (max-width: $xsmall) {
-					padding-left: 20px;
+				.name {
+					margin-top: 15px;
+					@media (max-width: $xsmall) {
+						padding-left: 20px;
+					}
+				}
+
+				.author {
+					@media (max-width: $xsmall) {
+						padding-left: 20px;
+					}
 				}
 			}
 		}
@@ -124,10 +131,18 @@
 					background: #fff;
 					transition: background .3s ease-in-out;
 					overflow: hidden;
-					text-align: 1000px;
+					text-indent: 1000px;
 					outline: 0 none;
 
 					&:hover {
+						box-shadow: none;
+						background: #000;
+					}
+				}
+
+				&.slick-active {
+
+					button {
 						box-shadow: none;
 						background: #000;
 					}
@@ -138,12 +153,15 @@
 
 	.main-text {
 		font-size: 14px;
+		width: 735px;
+		margin: 0 auto;
+		@media (max-width: $small) {
+			width: 100%;
+		}
 
 		.holder {
-			float: none;
-			margin: 0 auto;
 			line-height: 1.2;
-			@media (max-width: $xsmall) {
+			@media (max-width: $small) {
 				padding: 0 20px;
 			}
 
@@ -180,16 +198,17 @@
 		align-items: center;
 
 		.item {
+			width: 100%;
 
 			img {
-				max-width: 100%;
+				width: 100%;
 			}
 
 			iframe {
-				@media (max-width: $small) {
-					width: 320px!important;
-					height: 200px!important;
-				}
+				position: absolute;
+				top: 0; left: 0;
+				width: 100%;
+				height: 100%;
 			}
 
 			.text-snip {
@@ -209,6 +228,19 @@
   				.author {
   					color: #000;
   				}
+			}
+
+			&.video {
+				margin-bottom: 45px;
+				position: relative;
+				padding-bottom: 56.25%;/*пропорции видео 16:9 */
+				padding-top: 25px;
+				height: 0;
+
+				.text-snip {
+					position: absolute;
+					bottom: -34px;
+				}
 			}
 
 			& + .item {
@@ -246,6 +278,18 @@
 			.item {
 				padding: 0;
 				height: 21px;
+
+				&.vk {
+
+					a {
+						display: inline-block;
+						width: 21px;
+						height: 21px;
+						background-size: cover;
+						background-repeat: no-repeat;
+						background-image: url(../../images/icon/vk-b-1.svg);
+					}
+				}
 
 				.link {
 					display: inline-block;
