--- a/assets/sass/newStyles/_main.scss
+++ b/assets/sass/newStyles/_main.scss
@@ -1,7 +1,7 @@
 .news-item-page {
 
 	#main {
-		padding: 6em 0 4em 0;
+		padding: 6em 0 0 0;
 	    width: 90%;
 	    @media (max-width: $large) {
 	    	width: 100%!important;
