--- a/assets/sass/newStyles/_news-item.scss
+++ b/assets/sass/newStyles/_news-item.scss
@@ -5,6 +5,9 @@
 		.top-holder {
 			margin: 0 auto 35px;
 			width: 735px;
+			@media (max-width: $large) {
+				width: 500px;
+			}
 			@media (max-width: $small) {
 				padding: 0 20px;
 				width: 100%;
@@ -80,6 +83,9 @@
 
 				img {
 					height: 680px;
+					@media (max-width: 2559px) {
+						height: 390px;
+					}
 					@media (max-width: $large) {
 						height: 390px;
 					}
@@ -100,9 +106,13 @@
 					}
 				}
 
-				.author {
-					@media (max-width: $xsmall) {
-						padding-left: 20px;
+				.aut-holder {
+					margin-top: 15px;
+
+					.author {
+						@media (max-width: $xsmall) {
+							padding-left: 20px;
+						}
 					}
 				}
 			}
@@ -113,6 +123,7 @@
 			margin: 0;
 			padding: 0;
 			text-align: center;
+			margin-top: 20px;
 
 			li {
 				padding: 0;
@@ -155,6 +166,9 @@
 		font-size: 14px;
 		width: 735px;
 		margin: 0 auto;
+		@media (max-width: $large) {
+			width: 500px;
+		}
 		@media (max-width: $small) {
 			width: 100%;
 		}
@@ -193,9 +207,18 @@
 
 	.author-gallery {
 		display: flex;
-		margin-bottom: 40px;
+		margin-bottom: 20px;
 		flex-direction: column;
 		align-items: center;
+		width: 735px;
+		margin-left: auto;
+		margin-right: auto;
+		@media (max-width: $large) {
+			width: 500px;
+		}
+		@media (max-width: $small) {
+			width: 100%;
+		}
 
 		.item {
 			width: 100%;
@@ -214,12 +237,12 @@
 			.text-snip {
 				font-size: 12px;
   				line-height: 1.42;
-  				padding: 12px 0 0;
+  				padding: 8px 0 0;
   				@media (max-width: $large) {
   					padding: 12px 30px 0;
   				}
   				@media (max-width: $small) {
-  					padding: 12px 0 0;
+  					padding: 12px 20px 0;
   				}
   				@media (max-width: $xsmall) {
   					padding: 12px 20px 0;
@@ -231,7 +254,7 @@
 			}
 
 			&.video {
-				margin-bottom: 45px;
+				margin-bottom: 30px;
 				position: relative;
 				padding-bottom: 56.25%;/*пропорции видео 16:9 */
 				padding-top: 25px;
@@ -239,7 +262,7 @@
 
 				.text-snip {
 					position: absolute;
-					bottom: -34px;
+					bottom: -20px;
 				}
 			}
 
