--- a/assets/sass/newStyles/_mustread.scss
+++ b/assets/sass/newStyles/_mustread.scss
@@ -1,13 +1,13 @@
 .mustread {
 	margin-bottom: 280px;
+	height: 340px;
 
 	.block-title {
 		margin-bottom: .5em;
 	}
 
 	.holder {
-		// max-width: 1180px;
-		// width: 100%;
+		height: 340px;
 		position: relative;
 		overflow: hidden;
 
