--- a/assets/sass/newStyles/_salvattore.scss
+++ b/assets/sass/newStyles/_salvattore.scss
@@ -15,12 +15,19 @@
 }
 
 .salvattore {
+	overflow: hidden;
 
 	.column {
 		float: left;
 
 		.item {
-			margin-bottom: 40px;
+			margin-bottom: 140px;
+			@media (max-width: $large) {
+				margin-bottom: 100px;
+			}
+			@media (max-width: $small) {
+				margin-bottom: 40px;
+			}
 		}
 	}
 
