--- a/assets/sass/newStyles/_news-item.scss
+++ b/assets/sass/newStyles/_news-item.scss
@@ -218,6 +218,10 @@
 		}
 		@media (max-width: $small) {
 			width: 100%;
+			padding: 0 20px;
+		}
+		@media (max-width: $xsmall) {
+			padding: 0;
 		}
 
 		.item {
@@ -242,7 +246,7 @@
   					padding: 12px 30px 0;
   				}
   				@media (max-width: $small) {
-  					padding: 12px 20px 0;
+  					padding: 12px 0 0;
   				}
   				@media (max-width: $xsmall) {
   					padding: 12px 20px 0;
