--- a/assets/sass/newStyles/_news-item.scss
+++ b/assets/sass/newStyles/_news-item.scss
@@ -10,6 +10,9 @@
 			}
 			@media (max-width: $small) {
 				padding: 0 20px;
+				width: 90%;
+			}
+			@media (max-width: $xsmall) {
 				width: 100%;
 			}
 
