--- a/assets/sass/newStyles/theme.scss
+++ b/assets/sass/newStyles/theme.scss
@@ -11,3 +11,7 @@
 @import "projects";
 @import "description";
 @import "salvattore";
+@import "banner";
+@import "project-about";
+@import "tipical-gallery";
+@import "works";
