--- a/assets/sass/newStyles/_fixes.scss
+++ b/assets/sass/newStyles/_fixes.scss
@@ -48,7 +48,8 @@
 	}
 }
 
-.booklet-page, .news-item-page, .author-page {
+.booklet-page, .news-item-page,
+.author-page, .project-page {
 
 	#header {
 		top: 0;
@@ -401,7 +402,7 @@ h2.block-title {
 	}
 }
 
-.booklet-page, .author-page {
+.booklet-page, .author-page, .project-page {
 
 	#header {
 
