--- a/assets/sass/newStyles/_project-about.scss
+++ b/assets/sass/newStyles/_project-about.scss
@@ -1,10 +1,10 @@
 .b-project-about {
     padding: 170px 0 90px;
     @media (max-width: $small) {
-        padding: 60px 0 140px;
+        padding: 120px 0 140px;
     }
     @media (max-width: $xsmall) {
-        padding: 32px 20px 90px;
+        padding: 70px 20px 90px;
     }
 
     .title {
@@ -35,6 +35,34 @@
         }
         @media (max-width: $xsmall) {
             column-count: 1;
+        }
+
+        .button {
+            margin: 15px auto 0;
+            display: none;
+            width: 130px;
+            height: 40px;
+            font-size: 14px;
+            line-height: 40px;
+            text-align: center;
+            padding: 0;
+            @media (max-width: $xsmall) {
+                display: block;
+            }
+        }
+
+        .expander {
+            @media (max-width: $xsmall) {
+                max-height: 0;
+                overflow: hidden;
+                transition: max-height .3s ease-in-out;
+            }
+
+            &.active {
+                @media (max-width: $xsmall) {
+                    max-height: 2000px;
+                }
+            } 
         }
     }
 }
