--- a/assets/sass/newStyles/_works.scss
+++ b/assets/sass/newStyles/_works.scss
@@ -2,6 +2,7 @@
 	overflow: hidden;
 	min-height: fit-content;
 	margin-bottom: 302px;
+	height: fit-content;
 	@media (max-width: $large) {
         margin-bottom: 180px;
     }
