--- a/assets/sass/newStyles/_projects.scss
+++ b/assets/sass/newStyles/_projects.scss
@@ -82,7 +82,6 @@
 
             &.headline {
                 width: 540px;
-                padding-left: 15px;
                 @media (max-width: $large) {
                     width: 390px;
                 }
@@ -164,6 +163,10 @@
                 }
                 @media (max-width: $xsmall) {
                     max-width: 200px;
+                }
+
+                &.headline {
+                    padding-left: 15px;
                 }
 
                 .image {
