--- a/assets/sass/newStyles/_salvattore.scss
+++ b/assets/sass/newStyles/_salvattore.scss
@@ -58,3 +58,65 @@
 		}
 	}
 }
+
+/* ДВЕ КОЛОНКИ */
+@media screen and (max-width: 480px){
+	.salvattore-2col[data-columns]::before {
+		content: '1 .column.size-1of1';
+	}
+}
+@media screen and (min-width: 481px) {
+	.salvattore-2col[data-columns]::before {
+		content: '2 .column.size-1of2';
+	}
+}
+
+.salvattore-2col {
+	min-height: fit-content;
+	max-height: fit-content!important;
+
+	.column {
+		float: left;
+		position: relative;
+
+		.item {
+			margin-bottom: 140px;
+			position: relative;
+			@media (max-width: $large) {
+				margin-bottom: 100px;
+			}
+			@media (max-width: $small) {
+				margin-bottom: 40px;
+			}
+		}
+
+		.news-snip-last {
+			left: -4.5em;
+			position: absolute;
+			transform: rotate(-90deg);
+		}
+	}
+
+	.size-1of1 {
+		width: 100%;
+		margin-right: 0;
+	}
+
+	.size-1of2 {
+		width: 45%;
+		margin-right: 10%;
+
+		&:nth-child(2n+2) {
+			margin-right: 0;
+		}
+	}
+
+	.size-1of3 {
+		width: 28%;
+		margin-right: 8%;
+
+		&:nth-child(3n+3) {
+			margin-right: 0;
+		}
+	}
+}
