--- a/assets/sass/newStyles/_fixes.scss
+++ b/assets/sass/newStyles/_fixes.scss
@@ -457,3 +457,13 @@ h2.block-title {
 		}
 	}
 }
+
+body.is-loading {
+
+	.an-loader {
+
+		.an-loader-img {
+			animation: spin 4s linear infinite!important;
+		}
+	}
+}
