--- a/assets/sass/newStyles/_fixes.scss
+++ b/assets/sass/newStyles/_fixes.scss
@@ -88,7 +88,7 @@
 		.item {
 			display: inline-block;
 			font-size: 15px;
-			color: #b5b4b4;
+			color: #000;
 
 			& + .item {
 				margin-left: 32px;
@@ -303,7 +303,7 @@
 		.item {
 			display: inline-block;
 			font-size: 15px;
-			color: #b5b4b4;
+			color: #000;
 
 			& + .item {
 				margin-right: 32px;
@@ -324,6 +324,17 @@
 	}
 
 	&.sticky {
+
+		.sub-scroll-menu {
+
+			.item {
+				color: #b5b4b4;
+
+				&.active {
+					color: #000;
+				}
+			}
+		}
 
 		a[href="#nav"] {
 			background-position: center right;
@@ -446,6 +457,34 @@ h2.block-title {
 
 .news {
 
+	.image {
+		margin-bottom: 1em;
+
+		&:after {
+			background: rgb(229, 48, 48);
+		}
+	}
+
+	.news-snip-content {
+
+		a:hover {
+			color: rgb(229, 48, 48);
+		}
+
+		.news-snip-tags {
+
+			li {
+
+			    a {
+
+			    	&:hover {
+			    		color: #d6d6d6;
+			    	}
+			    }
+			}
+		}
+	}
+
 	.news-snip {
 
 		.news-snip-content {
@@ -455,6 +494,7 @@ h2.block-title {
 		}
 
 		.news-snip-tags {
+			padding-top: 0;
 
 			li {
 				text-decoration: none;
