--- a/assets/sass/newStyles/_mustread.scss
+++ b/assets/sass/newStyles/_mustread.scss
@@ -76,6 +76,7 @@
 			display: inline-block;
 			line-height: normal;
 			margin: 0 35px;
+			outline: 0 none;
 			@media (max-width: $large) {
 				margin: 0 15px;
 			}
@@ -99,6 +100,10 @@
 				@media (max-width: $large) {
 					font-size: 24px;
 				}
+			}
+
+			* {
+				outline: 0 none;
 			}
 		}
 	}
