--- a/assets/sass/newStyles/_main-modal.scss
+++ b/assets/sass/newStyles/_main-modal.scss
@@ -17,9 +17,11 @@
         @media (max-width: $large) {
             position: static;
             padding: 69px 92px 24px;
+            align-items: flex-end;
+            justify-content: flex-end;
         }
         @media (max-width: $small) {
-            padding: 69px 40px 24px;
+            padding: 100px 40px 24px;
         }
         @media (max-width: $xsmall) {
             padding: 69px 0 24px;
@@ -34,7 +36,8 @@
             align-items: center;
             outline: 0 none;
             @media (max-width: $small) {
-                width: 40px;
+                // width: 40px;
+                display: none;
             }
             @media (max-width: $xsmall) {
                 display: none;
@@ -79,7 +82,10 @@
             opacity: 1;
             transition: opacity .3s ease-in-out;
             @media (max-width: $large) {
-                max-width: calc(100% - 40px);
+                max-width: calc(100% - 336px);
+            }
+            @media (max-width: $small) {
+                max-width: 100%;
             }
             @media (max-width: $xsmall) {
                 max-width: 100%;
@@ -92,7 +98,7 @@
             img {
                 max-width: 100%;
                 max-height: 95vh;
-                @media (max-width: $large) {
+                @media (max-width: $small) {
                     max-height: unset;
                     margin-bottom: 26px;
                 }
@@ -106,7 +112,7 @@
                 bottom: 0;
                 left: -336px;
                 max-width: 300px;
-                @media (max-width: $large) {
+                @media (max-width: $small) {
                     position: static;
                     max-width: 100%;
                 }
@@ -120,6 +126,34 @@
                     line-height: 17px;
                     color: #12110b;
                     margin-bottom: 5px;
+                    @media (max-width: $xsmall) {
+                        padding-right: 30px;
+                        position: relative;
+                        cursor: pointer;
+                    }
+
+                    &:after {
+                        @media (max-width: $xsmall) {
+                            content: '';
+                            width: 20px;
+                            height: 20px;
+                            background: url(../../images/project/plus.svg) no-repeat center;
+                            background-size: 100% auto;
+                            position: absolute;
+                            right: 0;
+                            top: 50%;
+                            margin-top: -10px;
+                        }
+                    }
+
+                    &.open {
+
+                        &:after {
+                            @media (max-width: $xsmall) {
+                                background: url(../../images/project/minus.svg) no-repeat center;
+                            }
+                        }
+                    }
                 }
 
                 .author, .info, .project-name {
@@ -183,6 +217,13 @@
                         }
                     }
                 }
+
+                .expand {
+                    @media (max-width: $xsmall) {
+                        padding-top: 6px;
+                        display: none;
+                    }
+                }
             }
         }
     }
@@ -198,6 +239,12 @@
         position: absolute;
         cursor: pointer;
         box-shadow: none;
+        @media (max-width: $small) {
+            width: 18px;
+            height: 18px;
+            top: 40px;
+            right: 40px;
+        }
         @media (max-width: $xsmall) {
             width: 18px;
             height: 18px;
