--- a/assets/sass/newStyles/_main-modal.scss
+++ b/assets/sass/newStyles/_main-modal.scss
@@ -301,3 +301,13 @@
     //     }
     // }
 }
+
+.fancybox-is-open {
+
+    .b-main-modal {
+        @media (max-width: $small) {
+            display: flex!important;
+            align-items: center;
+        }
+    }
+}
