Стили по странице артистов + стили для буклета

--- a/assets/sass/newStyles/_fixes.scss
+++ b/assets/sass/newStyles/_fixes.scss
@@ -728,3 +728,20 @@ body {
 		}
 	}
 }
+
+.booklet-page {
+
+	.news + hr.trans {
+		margin-bottom: 0;
+	}
+}
+
+.artists-list {
+	columns: 3;
+	@media (max-width: $small) {
+		columns: 2;
+	}
+	@media (max-width: $xsmall) {
+		columns: 1;
+	}
+}
