--- a/assets/sass/newStyles/_works.scss
+++ b/assets/sass/newStyles/_works.scss
@@ -20,6 +20,7 @@
 	    box-sizing: content-box;
 	    overflow: hidden;
 	    position: relative;
+	    outline: 0 none;
 
 		img {
 			display: block;
