--- a/assets/sass/newStyles/_fixes.scss
+++ b/assets/sass/newStyles/_fixes.scss
@@ -720,12 +720,21 @@ body {
 .isotope-grid {
 
 	.item {
+		padding: 0 2em;
 		padding-bottom: 100px;
 		@media (max-width: $large) {
-			margin-bottom: 100px;
+			padding-bottom: 100px;
 		}
 		@media (max-width: $small) {
-			margin-bottom: 40px;
+			padding-bottom: 40px;
+		}
+		@media (max-width: $xsmall) {
+			padding-left: 0;
+			padding-right: 0;
+		}
+
+		.news-snip-last {
+			left: -35px;
 		}
 	}
 }
