--- a/assets/sass/newStyles/_projects.scss
+++ b/assets/sass/newStyles/_projects.scss
@@ -20,9 +20,6 @@
                 margin-bottom: 5px;
                 font-size: 12px;
             }
-            @media (max-width: $xsmall) {
-                padding-left: 15px;
-            }
         }
 
         .mobile-headline {
@@ -207,6 +204,22 @@
                     a {
                         color: #000;
                     }
+                }
+            }
+        }
+    }
+}
+
+.author-page {
+
+    .b-projects {
+
+        .owl-stage {
+
+            .owl-item:first-child {
+
+                .item {
+                    padding-left: 10em;
                 }
             }
         }
