Верстка новой страницы выставок

--- a/assets/sass/newStyles/theme.scss
+++ b/assets/sass/newStyles/theme.scss
@@ -18,3 +18,6 @@
 @import "project-title";
 @import "partners";
 @import "main-modal";
+@import "exhibition-carousel";
+@import "future-expo";
+@import "past-expo";
