--- a/assets/sass/newStyles/_fixes.scss
+++ b/assets/sass/newStyles/_fixes.scss
@@ -796,3 +796,45 @@ body {
 		clear: both;
 	}
 }
+
+.exhibitions-page {
+
+	#main {
+
+		&.top-container {
+			padding-top: 200px;
+			@media (max-width: $large) {
+				padding-top: 110px;
+			}
+			@media (max-width: $small) {
+				padding-top: 195px;
+			}
+			@media (max-width: $xsmall) {
+				padding-top: 125px;
+			}
+		}
+	}
+
+	h1 {
+		margin-bottom: 65px;
+		line-height: normal;
+		@media (max-width: $large) {
+			margin-bottom: 0;
+		}
+	}
+
+	#header {
+		top: 0;
+
+		& > a[href="#nav"] {
+			background-image: url(../../images/icon/burger.svg);
+		}
+	}
+}
+
+#main {
+
+	&.no-top {
+		padding-top: 0;
+	}
+}
